--- a/train_surrogate/adult/no_DP.yaml
+++ b/train_surrogate/adult/no_DP.yaml
@@ -1,4 +1,4 @@
-program: ../surrogate.py
+program: ../../train_surrogate.py
 method: bayes
 metric:
   name: validation_loss
@@ -37,6 +37,6 @@ command:
   - --project_name
   - Private_Fast_Shap
   - --model_name
-  - ../train_model/adult_NO_DP.pth
+  - ../artifacts/adult/bb/adult_NO_DP.pth
   - --dataset_name
   - adult
