--- a/train_surrogate/dutch/surrogate_dutch_DP_1.yaml
+++ b/train_surrogate/dutch/surrogate_dutch_DP_1.yaml
@@ -1,4 +1,4 @@
-program: ../surrogate.py
+program: ../../train_surrogate.py
 method: bayes
 metric:
   name: validation_loss
@@ -15,19 +15,19 @@ parameters:
     max: 0.1
   optimizer:
     values: ["adam", "sgd"]
-  clipping:
-    min: 1.0
-    max: 20.0
   validation_samples:
     min: 5
-    max: 100
+    max: 10
   validation_batch_size:
-    min: 100
+    min: 1000
     max: 10000
   epochs:
     min: 10
-    max: 100
-
+    max: 80
+  clipping:
+    min: 1.0
+    max: 20.0
+    
 command:
   - ${env}
   - poetry 
@@ -35,11 +35,13 @@ command:
   - python
   - ${program}
   - ${args}
-  - --epsilon
-  - 1.0
   - --sweep
   - True
   - --project_name
   - Private_Fast_Shap
   - --model_name
-  - ../train_model/model_agosto_DP_1.pth
+  - ../../artifacts/dutch/bb/bb_dutch_DP_1.pth
+  - --dataset_name
+  - dutch
+  - --epsilon
+  - 1.0
