--- a/train_explainer/mnist/DP_4.yaml
+++ b/train_explainer/mnist/DP_4.yaml
@@ -13,22 +13,18 @@ parameters:
   lr:
     min: 0.0001
     max: 0.1
-  optimizer:
-    values: ["adam", "sgd"]
   validation_samples:
-    min: 2
-    max: 25
+    min: 16
+    max: 48
   num_samples:
-    min: 2
-    max: 25
+    min: 16
+    max: 48
   clipping:
     min: 1.0
     max: 20.0
   eff_lambda:
     min: 0.0
     max: 1.0
-  paired_sampling:
-    values: [True, False]
     
 command:
   - ${env}
@@ -47,5 +43,9 @@ command:
   - 4.0
   - --dataset_name
   - mnist 
+  - --paired_sampling
+  - True
   - --epochs
   - 20
+  - --optimizer 
+  - adam
