--- a/train_explainer/mnist/NO_DP.yaml
+++ b/train_explainer/mnist/NO_DP.yaml
@@ -13,8 +13,6 @@ parameters:
   lr:
     min: 0.0001
     max: 0.1
-  optimizer:
-    values: ["adam", "sgd"]
   validation_samples:
     min: 16
     max: 48
@@ -24,9 +22,7 @@ parameters:
   eff_lambda:
     min: 0.0
     max: 1.0
-  epochs:
-    min: 20
-    max: 100
+  
 command:
   - ${env}
   - poetry 
@@ -44,3 +40,7 @@ command:
   - mnist
   - --paired_sampling
   - True
+  - --epochs
+  - 20
+  - --optimizer 
+  - adam
