--- a/FL/FL/examples/dutch_explainer/explainer_50_nodes_non_iid_BB_DP.yaml
+++ b/FL/FL/examples/dutch_explainer/explainer_50_nodes_non_iid_BB_DP.yaml
@@ -1,8 +1,8 @@
 program: ../../main.py
 method: bayes
 metric:
-  name: Validation_Accuracy
-  goal: maximize
+  name: validation_loss
+  goal: minimize
 early_terminate:
   type: hyperband
   min_iter: 5
@@ -18,10 +18,20 @@ parameters:
     max: 0.1
   optimizer:
     values: ["adam", "sgd"]
-  clipping: 
+  validation_samples:
+    min: 5
+    max: 10
+  validation_batch_size:
+    min: 1000
+    max: 10000
+  eff_lambda:
+    min: 0.0
+    max: 1.0
+  paired_sampling:
+    values: [True, False]
+  clipping:
     min: 1.0
     max: 20.0
-
 
 command:
   - ${env}
@@ -70,5 +80,9 @@ command:
   - non_iid
   - --alpha_dirichlet
   - 5.0
+  - --train_explainer
+  - True
+  - --surrogate_name 
+  - ./dutch_surrogate_DP_1.pth
   - --epsilon
   - 1.0
